--- a/projetopr2/projetopr2.csproj
+++ b/projetopr2/projetopr2.csproj
@@ -34,6 +34,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -59,6 +62,18 @@
     </Compile>
     <Compile Include="cardapio1.Designer.cs">
       <DependentUpon>cardapio1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CadastroEndereco.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastroEndereco.Designer.cs">
+      <DependentUpon>CadastroEndereco.cs</DependentUpon>
     </Compile>
     <Compile Include="pedidos.cs">
       <SubType>Form</SubType>
@@ -122,8 +137,14 @@
     <EmbeddedResource Include="confimacaosenha.resx">
       <DependentUpon>confimacaosenha.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CadastroEndereco.resx">
+      <DependentUpon>CadastroEndereco.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pedidos.resx">
       <DependentUpon>pedidos.cs</DependentUpon>
@@ -156,6 +177,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
