--- a/projetopr2/projetopr2.csproj
+++ b/projetopr2/projetopr2.csproj
@@ -75,6 +75,18 @@
     <Compile Include="formListaEnderecos.Designer.cs">
       <DependentUpon>formListaEnderecos.cs</DependentUpon>
     </Compile>
+    <Compile Include="formMeusPedidos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formMeusPedidos.Designer.cs">
+      <DependentUpon>formMeusPedidos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="funcionarios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="funcionarios.Designer.cs">
+      <DependentUpon>funcionarios.cs</DependentUpon>
+    </Compile>
     <Compile Include="pedidos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,6 +157,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="formListaEnderecos.resx">
       <DependentUpon>formListaEnderecos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formMeusPedidos.resx">
+      <DependentUpon>formMeusPedidos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="funcionarios.resx">
+      <DependentUpon>funcionarios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pedidos.resx">
       <DependentUpon>pedidos.cs</DependentUpon>
